# Proj_Tracker

./: .gitignore  README.md  pyproject.toml  requirements.txt
app/: auth.py  curd.py  database.py  main.py  models.py  schemas.py
